    module.
  * uDMX and Enttec devices are now made user-readable/writable with a custom
    udev rule.
  * ftd2xx.dll was removed from Windows build of FTDIDMX since it should come
    with the FTDI driver installation.
  * Renamed "USB DMX Output" plugin to "Peperoni Output" to make it clearer
    that it has nothing to do with Enttec DMX USB devices.

 -- Heikki Junnila <hjunnila@julia.avaya.ath.cx>  Sun, 04 Oct 2009 19:07:28 +0300

qlc (3.0.2) stable; urgency=high
  * Two crash bugs were fixed in midi input and output plugins.

 -- Heikki Junnila <hjunnila@users.sf.net>  Sun, 20 Sep 2009 13:29:47 +0300

qlc (3.0.1) stable; urgency=high

  * Quality was improved thru automatic unit testing of all engine components
  * Engine-originated crashes have been fixed
  * Support for Enttec DMX USB Pro dongle was added
  * Preliminary support for Enttec Wings was added
  * Maximum channel count per fixture was increased to 128
  * Initial window placement bug was fixed
  * EFX path visualization was improved with animation
  * Function timing accuracy has been improved slightly
  * A bug related to fixture loading and wrong ID assignment was fixed
  * Engine and UI components have been separated to drastically cut down
    on call-graph spaghetti

 -- Heikki Junnila <hjunnila@users.sf.net>  Mon, 31 Aug 2009 21:01:06 +0300

qlc (3.0) stable; urgency=low

  * Port from Qt3 to Qt4
  * Windows and Mac OSX ports
  * Scenes: new and faster editor, multiple fixture support
  * EFX: new editor, serial and parallel modes, multiple fixture support
  * New DMX/fixture monitor
  * New generic fixture for dimmers
  * New cue list widget in virtual console
  * XYPad: new and faster fixture-based editor
  * Improved timer accuracy
  * Much faster and efficient function engine
  * Complete output subsystem renewal
  * New output plugins (LLA, FTDI, MIDI, uDMX)
  * Support for multiple universes (4) thru different plugins
  * Support for input devices (slider boards etc.)